# sigtech-python

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  SECURITY.md  client_based_interaction.md  create_an_environment_variable.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
.lockfiles/: tools.txt
docs/: auth.md  client_based_interaction.md  data.md  datasets.md  jobs.md
examples/: 1_Pair_Trading_Commodity_Futures.ipynb  2_FX_Futures_Momentum.ipynb  2_Trend_Following  2_Trend_Following.ipynb  3_Golden_Crossover.ipynb  3_Prophet_Grains.ipynb  3_Seasonal_Grain_Basket.ipynb  4_Commodities_Calendar_Spread.ipynb  4_Golden_Crossover.ipynb  5_NASDAQ_Momentum_Using_ XGBoost.ipynb  5_NASDAQ_Momentum_Using_XGBoost.ipynb  6_Trading_ESPMini500__Futures_Using_VIX_Signals.ipynb  7_Backtesting_SignalStrategy_Using_Own_Data.ipynb  client_example.py  framework_example.py
examples/framework/: 1_Pair_Trading_Commodity_Futures.ipynb  2_FX_Futures_Momentum.ipynb  3_Golden_Crossover.ipynb  4_Commodities_Calendar_Spread.ipynb  5_NASDAQ_Momentum_Using_XGBoost.ipynb  6_Trading_ESPMini500__Futures_Using_VIX_Signals.ipynb  7_Backtesting_SignalStrategy_Using_Own_Data.ipynb  8_FX_Carry_Strategy.ipynb  9_Multi-Asset_Trend_Following.ipynb
examples/notebooks/: 01_Pair_Trading_Commodity_Futures.ipynb  02_FX_Futures_Momentum.ipynb  03_Golden_Crossover.ipynb  04_Commodities_Calendar_Spread.ipynb  05_NASDAQ_Momentum_Using_XGBoost.ipynb  06_Trading_ESPMini500__Futures_Using_VIX_Signals.ipynb  07_Backtesting_SignalStrategy_Using_Own_Data.ipynb  08_FX_Carry_Strategy.ipynb  09_Multi-Asset_Trend_Following.ipynb  10_FillCategoricalMissingValue_Transform.ipynb
examples/notebooks/data/: bond_references_data.csv
examples/scripts/: 01_sdk_basics.py  02_client_basics.py  03_rolling_futures.py  04_portfolio_table.py  05_etfs_and_stocks.py  06_reference_data.py  07_tradable_timeseries.py  08_overnight_index_swaps.py  09_interest_rate_swaps.py  10_fx_forwards.py  10_rolling_swaps.py  12_file_upload.py  13_government_bonds.py  14_options.py  15_rolling_future_fx_hedged.py
examples/scripts/data/: sample_data.csv
examples/validation/: 1_FillCategoricalMissingValue_Transform.ipynb
examples_data/: ty_signal.csv
scripts/: generate_rule_classes.py
sigtech/: __init__.py
sigtech/api/: __init__.py
sigtech/api/client/: client.py  response.py  settings.py  utils.py
sigtech/api/data/: __init__.py  utils.py  validation.py
sigtech/api/data/rules/: __init__.py  absolute_change_rule.py  large_gaps_rule.py  leading_zeros_rule.py  missing_reference_data_rule.py  no_null_rule.py  percentage_change_rule.py  stale_value_rule.py  value_in_range_rule.py  z_score_rule.py
sigtech/api/data/transforms/: __init__.py  fill_categorical_missing_value.py
sigtech/api/data_tools/: data_tools.py
sigtech/api/datasets/: __init__.py  __main__.py  common.py  delete.py  ls.py  rm.py  upload.py
sigtech/api/framework/: basket_strategy.py  config.py  environment.py  fixtures.py  framework_api_object.py  instrument_base.py  plot_wrapper.py  reinvestment_strategy.py  rolling_future_strategy.py  signal_strategy.py  strategy_base.py
sigtech/api/framework/indices/: tradable_index.py
sigtech/api/framework/instruments/: base.py  cash.py  fixes.py  futures.py  fx_otc.py  indices.py  ir_otc.py  ois_swap.py  option_groups.py  options.py
sigtech/api/framework/strategies/: basket_strategy.py  options_baskets.py  reinvestment_strategy.py  rolling_bond_strategy.py  rolling_future_fx_hedged.py  rolling_future_strategy.py  rolling_fx_forward_strategy.py  rolling_swap_strategy.py  signal_strategy.py  strategy.py
sigtech/api/jobs/: __init__.py
sigtech_api/: __init__.py
sigtech_api/core/: constants.py  framework_api.py
sigtech_api/examples/: example.py
sigtech_api/interface/: api_object.py  strategies.py
tests/: test_client.py  test_datasets.py  test_examples.py  test_jobs.py  test_response.py  test_settings.py  test_utils.py
