[project]
name = "sigtech"
version = "0.2.1"
authors = [
  { name="SigTech", email="support@sigtech.com" },
]
description = "SigTech Python SDK"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["SIGTECH", "FINANCE", "TRADING", "BACKTEST", "QUANT"]
license = {text= "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "requests",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/SIGTechnologies/sigtech-python"

[project.optional-dependencies]
tools = [
    "autoflake",
    "black",
    "build",
    "flake8",
    "isort",
    "mypy",
    "pandas-stubs",
    "pytest",
    "python-semantic-release<=7.34.6",
    "types-requests",
    "types-jinja2",
]
test = [
    "jupyter",
    "matplotlib",
    "pytest",
    "statsmodels",
]


[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"


[tool]

[tool.setuptools]

[tool.setuptools.dynamic]
version = {attr = "sigtech.api.VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "examples", "examples.*"]

[tool.pytest]
testpaths = ["tests"]

[tool.semantic_release]
branch = "master"
version_variable = "sigtech/api/version.py:__version__"
version_toml = "pyproject.toml:project.version"
tag_commit = true
commit_subject = "{version}"
commit_message = "Automatically generated by python-semantic-release [skip ci]"
upload_to_repository = false
upload_to_release = false
build_command = false
